--- a/adtestenv/package.json
+++ b/adtestenv/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-screen": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
